--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@nuxt/components": "^1.0.5",
     "@nuxtjs/device": "^1.2.7",
-    "nuxt": "^2.13.0"
+    "nuxt": "^2.13.0",
+    "vue-lazyload": "^1.3.3"
   }
 }
