--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "@nuxt/components": "^1.0.5",
     "nuxt": "^2.13.0",
     "vue-lazyload": "^1.3.3"
+  },
+  "devDependencies": {
+    "node-sass": "^4.14.1",
+    "sass-loader": "^9.0.2"
   }
 }
